<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/realText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="128dp"
        android:src="@drawable/ic_logout"
        android:contentDescription="@string/iclogout"
        app:layout_constraintBottom_toTopOf="@+id/real"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/realText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleRG"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/real"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/real"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:background="@drawable/button_enabled"
        android:contentDescription="@string/icRG"
        android:padding="8dp"
        android:src="@drawable/ic_real"
        app:layout_constraintBottom_toTopOf="@+id/trainingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/realText" />

    <TextView
        android:id="@+id/trainingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTM"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/real" />

    <ImageView
        android:id="@+id/training"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:background="@drawable/button_enabled"
        android:padding="8dp"
        android:src="@drawable/ic_training"
        android:contentDescription="@string/icTM"
        app:layout_constraintBottom_toTopOf="@+id/rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainingText"/>

    <ImageView
        android:id="@+id/rules"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button_enabled"
        android:padding="8dp"
        android:src="@drawable/ic_rules"
        android:contentDescription="@string/icRules"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training" />



</androidx.constraintlayout.widget.ConstraintLayout>